tests/reference/run-scalar_allocation_check_03-a66333c.stderr
runtime error: Tried to access member of unallocated variable 'var'
  --> tests/errors/scalar_allocation_check_03.f90:10:14
   |
10 |     print *, var%x
   |              ^^^^^ 'var' unallocated here
